--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(255, 255, 255);
 }
 .block1 {
-    background: url(photo_2023-11-02_18-56-00.jpg);
+    background: url("https://tse2.mm.bing.net/th?id=OIP.4mW8bLIk_PqFCvbIhd944QHaE8&pid=15.1");
     padding: 90px;
     background-size: cover;
     background-repeat: no-repeat;
